--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
-    "mongoose-geojson-schema": "^2.2.4"
+    "mongoose-geojson-schema": "^2.2.4",
+    "mongoose-paginate-v2": "^1.7.1"
   },
   "devDependencies": {
+    "eslint": "^8.33.0",
     "nodemon": "^2.0.20"
   }
 }
